# espy

./: .firebaserc  .gitignore  .gitmodules  LICENSE  pubspec.yaml
android/: build.gradle
android/app/: build.gradle  google-services.json
client/: .gitignore  protoc_dart.bat  pubspec.yaml
client/android/: build.gradle
client/android/app/: build.gradle  google-services.json
client/lib/: firebase_options.dart  main.dart
client/lib/constants/: config.dart  menu_items.dart  urls.dart
client/lib/dialogs/: settings_dialog.dart
client/lib/pages/: espy_app.dart  espy_app_web.dart  espy_material_app.dart  espy_router.dart  game_details_page.dart  game_list_page.dart  home_page.dart  library_page.dart  login_page.dart  top_level_page.dart
client/lib/widgets/: autocomplete_field.dart  empty_library.dart  espy_app.dart  espy_app_web.dart  espy_drawer.dart  espy_game_grid.dart  espy_navigation_rail.dart  espy_rail.dart  espy_scaffold.dart  game_card.dart  game_chips.dart  game_details.dart  game_library.dart  game_list_card.dart  game_tags.dart  game_tags_field.dart  game_tags_text_field.dart  image_carousel.dart  image_stack.dart  library_body.dart  library_headline.dart  library_slate.dart  search_dialog.dart  search_dialog_field.dart  settings_dialog.dart  webpage.dart
client/test/: widget_test.dart
client/web/: index.html
client/windows/runner/: Runner.rc
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: stores.dart  urls.dart
lib/modules/dialogs/: debug_dialog.dart  image_dialog.dart  video_dialog.dart
lib/modules/documents/: calendar.dart  frontpage.dart  game_digest.dart  game_entry.dart  gog_data.dart  igdb_collection.dart  igdb_company.dart  igdb_game.dart  library.dart  library_entry.dart  scores.dart  steam_data.dart  store_entry.dart  timeline.dart  unresolved.dart  user_annotations.dart  user_data.dart  user_ratings.dart  user_tags.dart
lib/modules/filtering/: library_filter.dart  library_view.dart
lib/modules/intents/: add_game_intent.dart  search_intent.dart
lib/modules/models/: app_config_model.dart  backend_api.dart  calendar_model.dart  custom_view_model.dart  failed_model.dart  frontpage_model.dart  game_library_model.dart  game_tags_model.dart  genres_mapping.dart  home_slates_model.dart  keyword_mapping.dart  library_entries_model.dart  library_filter.dart  library_filter_model.dart  library_index_model.dart  library_view_model.dart  remote_library_model.dart  timeline_model.dart  unresolved_model.dart  user_data_model.dart  user_library_model.dart  user_model.dart  wishlist_model.dart  years_model.dart
lib/pages/: espy_app.dart  espy_app_web.dart  espy_navigator.dart  espy_router.dart  top_level_page.dart
lib/pages/browse/: browse_page.dart
lib/pages/calendar/: annual_view.dart  calendar_card.dart  calendar_grid.dart  calendar_grid_entry.dart  calendar_page.dart  (+7 more)
lib/utils/: edit_distance.dart
lib/widgets/: autocomplete_field.dart  espy_rail.dart  expandable_button.dart  expandable_fab.dart  flat_shelve.dart  game_pulse.dart  hover_animation.dart  loading_spinner.dart  release_date_chip.dart  shelve.dart  sliding_chip.dart  sliver_shelve.dart  webpage.dart
server/: CMakeLists.txt  Cargo.toml  Dockerfile  build.rs  main.cpp
server/igdb/: CMakeLists.txt  igdb_parser.cpp  igdb_parser.hpp  igdb_parser_test.cpp  igdb_service.cpp  igdb_service.hpp  reconciliation_service.cpp  reconciliation_service.hpp  reconciliation_service_test.cpp
server/json/: CMakeLists.txt  igdb_parser.cpp  igdb_parser.hpp  igdb_parser_test.cpp  json_util.cpp  json_util.hpp  key_parser.cpp  key_parser.hpp  steam_parser.cpp  steam_parser.hpp  steam_parser_test.cpp
server/proto/: CMakeLists.txt  espy.proto  game_entry.proto  gog_entry.proto  igdbapi.proto  library.proto  reconciliation_task.proto  search_result.proto  steam_entry.proto  user.proto
server/service/: CMakeLists.txt  espy_service.cpp  espy_service.hpp
server/src/: firestore_util.rs  grpc_server.rs  http_server.rs  lib.rs  main.rs  recon_library.rs  search_igdb.rs  server.rs  status.rs  sync_library.rs  tracing.rs
server/src/api/: egs.rs  firestore.rs  gog.rs  gog_token.rs  igdb.rs  igdb_docs.rs  igdb_ranking.rs  mod.rs  steam.rs
server/src/api/igdb/: backend.rs  batch.rs  connection.rs  docs.rs  mod.rs  ranking.rs  resolve.rs  service.rs  state.rs
server/src/documents/: annotation.rs  collection.rs  external_game.rs  game_digest.rs  game_entry.rs  library_entry.rs  mod.rs  recent.rs  steam_data.rs  store_entry.rs  storefront.rs  user_data.rs  user_tags.rs
server/src/games/: archiver.rs  mod.rs  recon_report.rs  reconciler.rs  resolver.rs  steam_data.rs
server/src/gog/: api.rs  mod.rs  token.rs
server/src/handler/: espy.rs  mod.rs
server/src/http/: handlers.rs  mod.rs  models.rs  resources.rs  routes.rs
server/src/igdb_service/: api.rs
server/src/models/: game_entry.rs  igdb.rs  mod.rs  store_entry.rs
server/src/recon/: mod.rs  reconciler.rs  search.rs
server/src/steam/: api.rs
server/src/traits/: mod.rs  storefront.rs
server/src/util/: keys.rs  mod.rs  proto.rs  rate_limiter.rs
server/src/utils/: collect_collections.rs  collect_external_games.rs  collect_games.rs  external_game_retrieval.rs  game_retrieval.rs  refresh_collections.rs  refresh_entries.rs  refresh_game_entries.rs  refresh_library_entries.rs  search_igdb.rs  storefront_cleanup.rs  sync_library.rs
server/steam/: CMakeLists.txt  steam_library.cpp  steam_library.hpp  steam_library_test.cpp  steam_parser.cpp  steam_parser.hpp  steam_parser_test.cpp  steam_service.cpp  steam_service.hpp
server/util/: CMakeLists.txt  proto_util.cpp  proto_util.hpp  qps_rate_limiter.cpp  qps_rate_limiter.hpp  qps_rate_limiter_test.cpp  test_file_util.cpp  test_file_util.hpp  test_util.hpp
server_rust/: Cargo.toml  build.rs
server_rust/src/: lib.rs  main.rs
server_rust/src/igdb_service/: api.rs
server_rust/src/recon/: reconciler.rs
server_rust/src/steam/: api.rs
server_rust/src/util/: keys.rs  mod.rs  proto.rs  rate_limiter.rs
test/: widget_test.dart
web/: index.html  manifest.json
(+221 files in other folders)
