[package]
name = "espy_server"
version = "0.1.0"
authors = ["bourdenas"]
edition = "2021"

[[bin]] 
name = "http_server"
path = "src/http_server.rs"

[[bin]] 
name = "sync_library"
path = "src/sync_library.rs"

[[bin]] 
name = "search_igdb"
path = "src/search_igdb.rs"

[[bin]] 
name = "firestore_util"
path = "src/firestore_util.rs"


[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1"
clap = { version="4.0", features = ["derive"] }
console-subscriber = "0.1"
egs-api = "0.6"
firestore-db-and-auth = "0.6"
futures = "0.3"
itertools = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"

opentelemetry = "0.18"
tracing-opentelemetry = "0.18" 
opentelemetry-jaeger = "0.17"
