[package]
name = "espy_server"
version = "0.1.1"
authors = ["bourdenas"]
edition = "2021"

[[bin]] 
name = "http_server"
path = "src/http_server.rs"

# Command line utils
[[bin]] 
name = "sync_library"
path = "src/utils/sync_library.rs"

[[bin]] 
name = "refresh_entries"
path = "src/utils/refresh_entries.rs"

[[bin]] 
name = "refresh_library_entries"
path = "src/utils/refresh_library_entries.rs"

[[bin]]
name = "search_igdb"
path = "src/utils/search_igdb.rs"

[[bin]] 
name = "storefront_cleanup"
path = "src/utils/storefront_cleanup.rs"


[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1"
clap = { version="4.0", features = ["derive"] }
console-subscriber = "0.1"
firestore-db-and-auth = "0.6"
futures = "0.3"
itertools = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"

opentelemetry = "0.18"
tracing-opentelemetry = "0.18" 
opentelemetry-jaeger = "0.17"
