[package]
name = "server_rust"
version = "0.1.0"
authors = ["bourdenas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
prost = "0.7"

[build-dependencies]
prost-build = "0.7"
