[package]
name = "server_rust"
version = "0.1.0"
authors = ["bourdenas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }

[build-dependencies]
prost-build = "0.7"
